--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buzzer Tocard Corp.</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulaire de jeu</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="imageContainer"></div>
+  <div class="container">
+    <h1>Formulaire de jeu</h1>
+    <form id="gameForm">
+      <div id="playersContainer">
+        <!-- Conteneur pour les joueurs -->
+      </div>
+      <button type="button" onclick="addPlayer()">Ajouter un joueur</button>
+      <button type="submit">Commencer le jeu</button>
+    </form>
+  </div>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
