--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulaire de jeu</title>
+  <title>Buzzer TOCARD Corp©</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>Formulaire de jeu</h1>
+    <h1>Buzzer TOCARD Corp©</h1>
     <form id="gameForm">
       <div id="playersContainer">
         <!-- Conteneur pour les joueurs -->
